--- a/index.html
+++ b/index.html
@@ -54,6 +54,15 @@
 							</div>
 						</div>
 					</div>
+
+					<div class="col col-md-6">
+						<div class="panel">
+							<div class="panel-heading">Template Resultado</div>
+							<div class="panel-body darkgrey">
+								<textarea id="txtTemplateResultado" class="textAreaCustom"></textArea>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
